--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "editor.fontLigatures": true,
     "editor.fontSize": 16,
-    "workbench.colorTheme": "Material Theme",
-    "go.toolsGopath": "D:\\workspace\\code\\go\\bin",
-    "go.inferGopath": true,
+    "editor.fontFamily": "Fira Code",
     "go.testFlags": ["-race", "-v", "-count=1"],
+    "go.gopath": "/root/workspace/code/github.com/Soul-Mate/6.824",
+    "go.inferGopath": true,
+    "go.useLanguageServer": false,
+    "go.toolsGopath": "/root/go",
+    "go.formatTool": "goimports"
 }
